<resources>
    <string name="app_name">Coin</string>
    <string name="title_data">明细</string>
    <string name="title_write">记账</string>
    <string name="title_profile">个人中心</string>
    <string name="user_name">GiveMeMoney</string>

    <string name="edit_name">请输入用户名</string>
    <string name="edit_password">请输入密码</string>
    <string name="user_existed">已有账号，去登陆 ></string>
    <string name="go_to_register">快速注册 ></string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="exit">退出登录</string>
    <string name="tip_password_can_not_be_empty">密码不能为空</string>
    <string name="count_down">%ss</string>
    <string name="reset_pwd">重置密码</string>
    <string name="register_successfully">注册成功</string>
    <string name="login_successfully">登陆成功</string>
    <string name="tip_please_input_6_32_password">请输入6-32位密码</string>
    <string name="input_again">重新输入</string>
    <string name="tip_please_input_4_20_name">请输入4—20位用户名</string>
    <string name="name_length_error">用户名长度不符合要求</string>
    <string name="password_length_error">密码长度不符合要求</string>
    <string name="login_error">登录失败，您的账号和密码无法匹配</string>
    <string name="check_connection">请检查网络设置</string>
    <string name="go_to_check">前去检查</string>
    <string name="choose">选择</string>
    <string name="next">下一张</string>
    <string name="save_failed_local">保存失败</string>
    <string name="save_successfully_local">保存成功</string>
    <string name="delete_failed_local">删除失败</string>
    <string name="delete_successfully_local">删除成功</string>
    <string name="update_failed_local">更新失败</string>
    <string name="update_successfully_local">更新成功</string>

    <string name="budget">当月预算</string>
    <string name="cost">当月支出</string>
    <string name="report">消费报表</string>
    <string name="lately">最近七天</string>
    <string name="monthly">月末账单</string>
    <string name="budget2">当月预算:</string>
    <string name="cost2">当月支出:</string>
    <string name="report2">报表</string>
    <string name="cost_short">支出</string>

    <string name="last">last </string>

    <string name="check">check</string>

    <string name="today_view_today">Today</string>
    <string name="today_view_yesterday">Yesterday</string>
    <string name="today_view_this_week">This Week</string>
    <string name="today_view_last_week">Last Week</string>
    <string name="today_view_this_month">This Month</string>
    <string name="today_view_last_month">Last Month</string>
    <string name="today_view_this_year">This Year</string>
    <string name="today_view_last_year">Last Year</string>

    <string name="today_empty">New day!</string>
    <string name="yesterday_empty">No records.</string>
    <string name="this_week_empty">New week!</string>
    <string name="last_week_empty">No records.</string>
    <string name="this_month_empty">New month!</string>
    <string name="last_month_empty">No records.</string>
    <string name="this_year_empty">Happy new year!</string>
    <string name="last_year_empty">No records.</string>

    <string name="tag_eat">饮食</string>
    <string name="tag_hung">出行</string>
    <string name="tag_cloth">服装</string>
    <string name="tag_play">娱乐</string>
    <string name="tag_education">教育</string>
    <string name="tag_general">一般</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
