<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/purple"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_marginTop="48dp"
            android:src="@drawable/logo_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:src="@drawable/line_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/register"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/triangle"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center_horizontal">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/edit_name"
            app:met_baseColor="@color/purple"
            app:met_errorColor="@color/pink"
            app:met_iconLeft="@drawable/ic_name"
            app:met_iconPadding="0dp"
            app:met_primaryColor="@color/purple"
            android:textCursorDrawable="@color/purple"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_name"
            android:hint="@string/edit_password"
            app:met_baseColor="@color/purple"
            app:met_iconLeft="@drawable/ic_password"
            app:met_iconPadding="0dp"
            app:met_primaryColor="@color/purple"
            android:textCursorDrawable="@color/purple"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_password"
            android:layout_marginTop="32dp"
            android:background="@color/purple"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/user_existed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/btn_register"
            android:layout_alignRight="@id/btn_register"
            android:layout_below="@id/btn_register"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/user_existed"
            android:textColor="@color/pink" />

    </RelativeLayout>

</LinearLayout>