<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/write_fragment"
    tools:context="com.example.lwxwl.coin.Fragment.ProfileFragment">

    <!--
    <com.example.lwxwl.coin.UI.MyGridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:numColumns="4"
        android:verticalSpacing="1sp"
        android:horizontalSpacing="1sp"
        android:stretchMode="columnWidth"
        android:background="#ffffff"
        android:isScrollContainer="false"
        />
        -->

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_cost"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >

        <ImageButton
            android:id="@+id/btn_clear_cost"
            android:src="@drawable/ic_clear_24dp"
            android:background="@color/purple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            />

        <TextView
            android:text="@string/cost_short"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/llInput"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:src="@drawable/ic_eat" />

        <TextView
            android:id="@+id/tvTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/tag_eat"
            android:textColor="@color/ic_eat"
            android:textSize="16sp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_money"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:met_baseColor="@color/purple"
            app:met_primaryColor="@color/purple"
            android:inputType="number"
            android:textCursorDrawable="@color/purple"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTag1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_eat"
                android:src="@drawable/ic_eat"
                android:background="#fafafa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/tag_eat"
                android:textColor="#8e8e8e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_hung"
                android:src="@drawable/ic_hung"
                android:background="#fafafa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/tag_hung"
                android:textColor="#8e8e8e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_cloth"
                android:src="@drawable/ic_cloth"
                android:background="#fafafa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/tag_cloth"
                android:textColor="#8e8e8e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"/>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTag2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_play"
                android:src="@drawable/ic_play"
                android:background="#fafafa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/tag_play"
                android:textColor="#8e8e8e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_education"
                android:src="@drawable/ic_education"
                android:background="#fafafa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/tag_education"
                android:textColor="#8e8e8e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_general"
                android:src="@drawable/ic_general"
                android:background="#fafafa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/tag_general"
                android:textColor="#8e8e8e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
